--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,53 @@
+/* ===================== DEFAULT ===================== */
+:root {
+  --clr-primary: rgb(255, 255, 255);
+  --clr-secondary: rgb(0, 0, 0);
+  --clr-accent: rgb(192, 21, 21);
+  --theme: rgb(163, 24, 24);
+  --fs-lg: 1.5874em;
+  --fs-default: 1.2599em;
+  --fs-s: 1rem;
+  --fs-xs: 0.7937em;
+}
+h1 {
+  font-size: 2em;
+}
+h2 {
+  font-size: 1.5874em;
+}
+h3 {
+  font-size: 1.2599em;
+}
+p {
+  font-size: 1em;
+}
+footer {
+  font-size: 0.7937em;
+}
+@font-face {
+  font-family: "lorenzaregular";
+  src: url("./assets/lorenza-webfont.woff2") format("woff2"),
+    url("./assets/lorenza-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "respirablack";
+  src: url("./assets/respira_black-webfont.woff2") format("woff2"),
+    url("./assets/respira_black-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  cursor: none;
+}
 .customCursor {
   will-change: transform, transition, width, height, top, left;
   position: fixed;
@@ -5,7 +55,7 @@
   left: 10px;
   display: none;
   transform: translate(-50%, -50%);
-  background-color: #fff;
+  background-color: var(--clr-primary);
   mix-blend-mode: difference;
   width: 20px;
   height: 20px;
@@ -15,24 +65,6 @@
   overflow: hidden;
   /* animacija za "mouseout", ovo je default */
   animation: animIdle 0.3s forwards;
-}
-
-::root {
-  --clr-white: 0 0% 100%;
-}
-@font-face {
-  font-family: "GlyphWorld";
-  src: url("./assets/GlyphWorld-Desert.otf");
-  font-weight: normal;
-  font-style: normal;
-}
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  cursor: none;
 }
 *,
 html,
@@ -45,6 +77,9 @@ input[type="file"],
 input[type="file"]::file-selector-button {
   cursor: none;
 }
+*::selection {
+  background: rgb(192, 21, 21);
+}
 body {
   /* background: url(./assets/bg.svg) no-repeat center center fixed; */
   height: 100vh;
@@ -52,10 +87,10 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  font-family: Helvetica, sans-serif;
-  font-size: 1.2rem;
+  font-family: "lorenzaregular";
+  font-size: var(--fs-default);
   color: rgb(0, 0, 0);
-  background-color: rgb(238, 229, 229);
+  background-color: var(--clr-primary);
   /* background: linear-gradient(
         to top,
         rgba(245, 167, 0, 0.801),
@@ -105,15 +140,15 @@ span {
 
 button {
   outline: 0;
-  color: #fff;
+  color: var(--clr-primary);
   background: transparent;
-  border: 2px solid white;
+  border: 2px solid var(--clr-primary);
   display: inline-block;
   font-weight: 400;
   line-height: 1.5;
   text-align: center;
   padding: 6px 12px;
-  font-size: 16px;
+  font-size: var(--fs-lg);
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -130,7 +165,7 @@ button {
   opacity: 0;
 }
 .detailsText {
-  font-size: 1.5em;
+  font-size: var(--fs-lg);
   text-decoration: underline;
   display: block;
   margin: 1em;
@@ -141,27 +176,29 @@ button {
   text-align: center;
   border: 1px solid transparent;
   padding: 6px 12px;
-  font-size: 1rem;
+  font-size: var(--fs-default);
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  color: #ffffff;
-  border-color: #ffffff;
+  color: var(--clr-primary);
+  border-color: var(--clr-primary);
 }
 button:hover,
 .detailsText:hover {
   color: rgb(0, 0, 0);
-  background-color: #ffffff;
-  border-color: #ffffff;
+  background-color: var(--clr-primary);
+  border-color: var(--clr-primary);
 }
 .mobile-nav-toggle:hover {
   background-color: transparent;
 }
-input {
+input,
+textarea {
+  resize:vertical;
   display: block;
   margin: 1em;
-  color: rgb(36, 35, 42);
-  font-size: 16px;
+  color: var(--clr-secondary);
+  font-size: var(--fs-default);
   line-height: 20px;
   min-height: 28px;
   border-radius: 4px;
@@ -169,10 +206,11 @@ input {
   border: 2px solid transparent;
   box-shadow: rgb(0 0 0 / 12%) 0px 1px 3px, rgb(0 0 0 / 24%) 0px 1px 2px;
   background: rgb(251, 251, 251);
-  transition: all 0.1s ease 0s;
+  transition: box-shadow 0.4s ease-in-out 0s;
 }
 
-input:focus {
+input:focus,
+textarea:focus {
   box-shadow: rgb(0 0 0 / 72%) 0px 1px 3px, rgba(0, 0, 0, 14) 0px 1px 2px;
 }
 input:disabled {
@@ -188,10 +226,15 @@ input:disabled::selection {
 .logo {
   user-select: none;
   pointer-events: none;
-  width: 70px;
-  margin: 2rem clamp(1.5rem, 5vw, 3.5rem);
+  /* width: 20px; */
+  margin: 0 clamp(1rem, 4vw, 2rem);
+  /* margin: 2rem clamp(1.5rem, 5vw, 3.5rem); */
 }
-
+.navbar-span {
+  text-transform: uppercase;
+  color: var(--clr-primary);
+  font-size: var(--fs-s);
+}
 /* test anim */
 .rotating {
   -webkit-animation: rotating 2s linear infinite;
@@ -219,7 +262,7 @@ input:disabled::selection {
 
 .primary-header {
   display: flex;
-  gap: var(--gap, 1rem);
+  gap: 1rem;
   justify-content: space-between;
   align-items: center;
 }
@@ -227,103 +270,26 @@ input:disabled::selection {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: clamp(1.5rem, 5vw, 3.5rem);
+  /* gap: clamp(1.5rem, 5vw, 3.5rem); */
   list-style: none;
   padding: 0;
   margin: 0;
   background: rgb(0, 0, 0);
-  border-radius: 10px 0 0 10px;
+  /* border-radius: 10px 0 0 10px; */
 }
 .mobile-nav-toggle {
   display: none;
 }
-.primary-navigation span {
-  font-weight: 700;
-}
 .primary-navigation > * {
-  padding: 1rem 2rem;
+  padding: 0.7rem 2rem;
   border: 0;
 }
 @supports (backdrop-filter: blur(1rem)) {
   button,
   .primary-navigation,
   .detailsText {
-    background: rgba(0, 0, 0, 0.884);
+    background: rgb(0, 0, 0);
     backdrop-filter: blur(20px);
-  }
-}
-
-@media (max-width: 35rem) {
-  .primary-navigation {
-    gap: 0.5rem;
-    position: fixed;
-    z-index: 1000;
-    inset: 0 0 0 30%;
-    list-style: none;
-    padding: 2rem;
-    margin: 0;
-    flex-direction: column;
-    transform: translateX(100%);
-    border-radius: 5px 0 0 5px;
-    transition: transform 400ms cubic-bezier(1, 0, 0, 1);
-  }
-  .primary-navigation[data-visible="true"] {
-    transform: translateX(0);
-  }
-  .mobile-nav-toggle {
-    display: block;
-    position: absolute;
-    z-index: 9000;
-    right: 1rem;
-    top: 2rem;
-    background: transparent;
-    background-image: url("assets/hamburger.svg");
-    background-position: center;
-    width: 1.5rem;
-    aspect-ratio: 1;
-    background-repeat: no-repeat;
-    border: 0;
-  }
-  .mobile-nav-toggle[aria-expanded="true"] {
-    background-image: url("assets/hamburgerclose.svg");
-  }
-
-  /* profile */
-  #profile input {
-    display: block;
-    width: 90vw;
-  }
-}
-
-@media (min-width: 35em) {
-  .primary-navigation {
-    gap: 0.5rem;
-    padding-inline: clamp(3rem, 7vw, 7rem);
-  }
-}
-
-@media (min-width: 35em) and (max-width: 44.999rem) {
-  span {
-    display: none;
-  }
-}
-
-@media (min-width: 45em) {
-  .primary-header::after {
-    content: "";
-    display: block;
-    position: relative;
-    height: 1px;
-    width: 100%;
-    margin-right: -2.5rem;
-    background: rgba(255, 255, 255, 0.438);
-    order: 1;
-  }
-  nav {
-    order: 2;
-  }
-  .primary-navigation {
-    margin-block: 0;
   }
 }
 
@@ -340,13 +306,6 @@ li {
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("data:image/svg+xml;utf8, %3Csvg width='100%25' height='100%25' viewBox='0 0 1000 1000' xmlns='http://www.w3.org/2000/svg' %3E %3Cdefs%3E %3Cfilter id='grain' x='-50vw' y='-50vh' width='100vw' height='100vh'%3E %3CfeFlood flood-color='%23ffffff' result='neutral-gray' /%3E %3CfeTurbulence in='neutral-gray' type='fractalNoise' baseFrequency='2.5' numOctaves='100' stitchTiles='stitch' result='noise' /%3E %3CfeColorMatrix in='noise' type='saturate' values='0' result='destaturatedNoise' %3E%3C/feColorMatrix%3E %3CfeComponentTransfer in='desaturatedNoise' result='theNoise'%3E %3CfeFuncA type='table' tableValues='0 0 0.15 0'%3E%3C/feFuncA%3E %3C/feComponentTransfer%3E %3CfeBlend in='SourceGraphic' in2='theNoise' mode='soft-light' result='noisy-image' /%3E %3C/filter%3E %3CclipPath id='shape'%3E %3Cpath fill='currentColor' d='M815.5,653Q806,806,653,898Q500,990,334.5,910.5Q169,831,130.5,665.5Q92,500,174,378Q256,256,378,136.5Q500,17,660.5,98Q821,179,823,339.5Q825,500,815.5,653Z'%3E%3C/path%3E %3C/clipPath%3E %3C/defs%3E %3Cg filter='url(%23grain)' clip-path='url(%23shape)'%3E %3Cpath fill='%23444cf7' d='M815.5,653Q806,806,653,898Q500,990,334.5,910.5Q169,831,130.5,665.5Q92,500,174,378Q256,256,378,136.5Q500,17,660.5,98Q821,179,823,339.5Q825,500,815.5,653Z' /%3E %3C/g%3E %3C/svg%3E");
-} */
-
-/* .sepia {
-  filter: grayscale(100%) sepia(20%) brightness(88%);
-}
-.masked {
-  clip-path: circle(25% at 50% 50%);
 } */
 
 /* MASONRY */
@@ -368,6 +327,71 @@ li {
   height: auto;
   margin-bottom: 30px;
   image-rendering: -webkit-optimize-contrast;
+}
+
+/* MODAL */
+.modalBackground {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.555);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  color: var(--clr-secondary);
+  justify-content: center;
+  align-items: center;
+}
+.modalContainer {
+  display: flex;
+  justify-content: space-between;
+  /* width: 70%; */
+  max-width: 90%;
+  height: 80%;
+  border: 1px solid black;
+  border-radius: 1px;
+  background-color: var(--clr-primary);
+  box-shadow: rgba(0, 0, 0, 0.55) 0px 5px 15px;
+  display: flex;
+  padding: 0 25px;
+}
+.modalBody {
+  margin: auto;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: space-between;
+}
+.modalContainer img {
+  margin: auto;
+  object-fit: contain;
+  max-width: 50%;
+}
+
+/* ===================== PAGES =====================*/
+/* HOME */
+.homepage-header {
+  overflow: hidden;
+  margin-top: 3vh;
+}
+.homepage-title {
+  margin-top: 5%;
+  text-align: center;
+  font-family: "lorenzaregular";
+  font-size: 6rem;
+}
+.accent-span {
+  font-family: "respirablack";
+  font-size: 2em;
+}
+hr {
+  width: 105vw;
+  border: none;
+  background: black;
+  height: 1px;
+  margin: 3px;
+  margin-left: -2em;
 }
 
 /* PROFILE */
@@ -420,41 +444,131 @@ li {
   opacity: 0;
 }
 
-/* modal */
-.modalBackground {
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.555);
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: flex;
-  color: black;
-  justify-content: center;
-  align-items: center;
-}
-.modalContainer {
-  display: flex;
-  justify-content: space-between;
-  /* width: 70%; */
+/* SUBMIT IMAGE */
+.submit-form ul { overflow: hidden;
+  padding: 1.5rem 2rem;
+  background: hsl(0, 0%, 100%);
+  color: hsl(0, 0%, 10%);
+  margin: auto;
   max-width: 90%;
-  height: 80%;
-  border-radius: 15px;
-  background-color: rgba(255, 255, 255, 0.892);
-  box-shadow: rgba(0, 0, 0, 0.55) 0px 5px 15px;
+  width: 95vw;
   display: flex;
-  padding: 0 25px;
-}
-.modalBody {
-  margin: auto;
-  height: 50%;
-  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: space-between;
+  box-shadow: 0 1px 10px -8px currentColor;
 }
-.modalContainer img {
-  margin: auto;
-  object-fit: contain;
-  max-width: 50%;
+.submit-form > * + * {
+  margin-top: 0.5rem;
+}
+.submit-form label {
+  display: block;
+  font-weight: 700;
+}
+.submit-form input,
+textarea {
+  padding: 0.5rem;
+  border: 2px solid currentColor;
+  background: none;
+  font-size: var(--fs-default);
+  font-family: "lorenzaregular";
+  color: inherit;
+  outline: none;
+}
+.submit-form button {
+  background: hsl(0, 0%, 10%);
+  border: none;
+  color: hsl(0, 0%, 100%);
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  font-family: "lorenzaregular";
+  padding: 0.5rem 1rem;
+}
+
+/* ===================== MEDIA QUERY ===================== */
+@media (max-width: 35rem) {
+  .primary-navigation {
+    gap: 0.5rem;
+    position: fixed;
+    z-index: 1000;
+    inset: 0 0 0 30%;
+    list-style: none;
+    padding: 2rem;
+    margin: 0;
+    flex-direction: column;
+    transform: translateX(100%);
+    /* border-radius: 5px 0 0 5px; */
+
+    transition: transform 400ms cubic-bezier(1, 0, 0, 1);
+  }
+
+  .primary-navigation > li {
+    margin-top: 30px;
+    border-bottom: 2px solid transparent;
+  }
+
+  .primary-navigation > li:hover {
+    border-bottom: 2px solid white;
+  }
+  .navbar-span {
+    font-size: var(--fs-default);
+  }
+  .primary-navigation[data-visible="true"] {
+    transform: translateX(0);
+  }
+  .mobile-nav-toggle {
+    display: block;
+    position: absolute;
+    z-index: 9000;
+    right: 1rem;
+    top: 2rem;
+    background: transparent;
+    background-image: url("assets/hamburger.svg");
+    background-position: center;
+    width: 1.5rem;
+    aspect-ratio: 1;
+    background-repeat: no-repeat;
+    border: 0;
+  }
+  .mobile-nav-toggle[aria-expanded="true"] {
+    background-image: url("assets/hamburgerclose.svg");
+  }
+
+  /* profile */
+  #profile input {
+    display: block;
+    width: 90vw;
+  }
+}
+
+@media (min-width: 35em) {
+  .primary-navigation {
+    gap: 0.5rem;
+    padding-inline: clamp(3rem, 7vw, 7rem);
+  }
+}
+
+@media (min-width: 35em) and (max-width: 44.999rem) {
+  .navbar-span {
+    display: none;
+  }
+}
+
+@media (min-width: 45em) {
+  .primary-header::after {
+    content: "";
+    display: block;
+    position: relative;
+    height: 1px;
+    width: 100%;
+    margin-right: -2.5rem;
+    background: rgba(0, 0, 0, 0.438);
+    order: 1;
+  }
+  nav {
+    order: 2;
+  }
+  .primary-navigation {
+    margin-block: 0;
+  }
 }
