--- a/src/index.css
+++ b/src/index.css
@@ -128,10 +128,11 @@ input[type="file"]::file-selector-button {
   cursor: none;
 }
 *::selection {
-  background: rgb(192, 21, 21);
+  background: rgba(0, 0, 0, 0.877);
+  color: #ffffff;
 }
 body {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(29, 27, 27);
   /* https://framerusercontent.com/modules/assets/2048/sy0T3nkQUm19CQjLfCrE33og74~j2gmcJQvWCzkfljJuchAjvw0lHdGGLlhv5wQ_S1vdD4.png */
   background: url(./assets/clouds.svg);
   /* height: 100vh; */
@@ -222,7 +223,7 @@ button {
 button:hover,
 input:focus,
 textarea:focus {
-  box-shadow: rgba(0, 0, 0, 0.282) -2px 2px 5px;
+  box-shadow: rgba(0, 0, 0, 0.3) -2px 2px 5px;
 }
 button:active {
   background-color: rgb(43, 43, 43);
@@ -448,7 +449,8 @@ li {
   white-space: pre-line;
 }
 .modal__imgTag {
-  margin-top: 60px ;
+  margin-top: 60px;
+  margin-bottom: 30px;
 }
 .modal__imgTag-link {
   color: rgba(0, 0, 0, 0.7);
@@ -464,6 +466,11 @@ li {
   gap: var(--gap);
 }
 /* ===================== PAGES =====================*/
+.page-h1 {
+  font-family: "gg-bold";
+  margin-top: 20px;
+  text-align: center;
+}
 /* HOME */
 .homepage-header {
   overflow: hidden;
@@ -475,6 +482,7 @@ li {
   font-family: sans-serif;
   font-size: clamp(2em, -0.875em + 8.333vw, 6em);
 }
+
 .accent-span {
   font-family: "gg";
   font-size: 2em;
@@ -488,11 +496,10 @@ hr {
   margin-left: -2em;
 }
 .explore-images {
-  /* filter: grayscale(); */
-  transition: filter 400ms ease;
+  transition: filter 0.55s ease;
 }
 .explore-images:hover {
-  filter: none;
+  filter: invert(100%);
 }
 .show-more {
   display: flex;
@@ -526,12 +533,14 @@ hr {
   -webkit-mask-size: 7000% 100%;
   mask-size: 7000% 100%;
   border: none;
-  -webkit-animation: ani2 0.8s steps(70) ease-in forwards;
-  animation: ani2 0.8s steps(70) ease-in forwards;
+  transition: filter 0.55s ease;
+  /* -webkit-animation: ani2 0.8s steps(70) ease-in forwards;
+  animation: ani2 0.8s steps(70) ease-in forwards; */
 }
 .profile-image:hover {
-  -webkit-animation: ani 0.8s steps(70) forwards;
-  animation: ani 0.8s steps(70) forwards;
+  filter: invert(100%);
+  /* -webkit-animation: ani 0.6s steps(70) forwards;
+  animation: ani 0.6s steps(70) forwards; */
 }
 .edit-details-container {
   display: flex;
@@ -549,12 +558,12 @@ hr {
   flex-direction: column;
   gap: var(--gap);
 }
-
+/* 
 @keyframes ani {
   0% {
     -webkit-mask-position: 0 0;
     mask-position: 0 0;
-    filter: grayscale(100%);
+   
   }
   50% {
     -webkit-mask-position: 100% 0;
@@ -563,7 +572,7 @@ hr {
   100% {
     -webkit-mask-position: 0 0;
     mask-position: 0 0;
-    filter: grayscale(100%) invert(100%);
+    filter:invert(100%);
   }
 }
 
@@ -575,7 +584,7 @@ hr {
   100% {
     opacity: 1;
   }
-}
+} */
 
 #avatar {
   background-color: rgba(255, 255, 255, 0.74);
@@ -613,29 +622,77 @@ hr {
   opacity: 0;
 }
 
+/* SIGN IN / UP */
+.sign-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.sign-page form {
+  margin-top: 30px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: white;
+  border: 1px solid black;
+  border-left: 4px solid black;
+}
+.sign-page form input {
+  width: 90%;
+  margin: 30px 0;
+  border: 2px solid black;
+  background: none;
+  font-size: var(--fs-default);
+  font-family: "gg";
+  color: inherit;
+  outline: none;
+}
+.sign-page form button {
+  width: 100%;
+}
+.forgot-pass-link {
+  text-decoration: underline;
+  color: rgba(0, 0, 0, 0.61);
+  padding: 20px;
+}
+
 /* SUBMIT IMAGE */
 #submit-image-div {
+  padding-top: 20px;
   margin: auto;
   width: 85%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+#submit-image-div form {
+  z-index: 2;
+  border: 1px solid black;
+  border-left: 5px solid black;
+  height: 100%;
+  width: 100%;
+  background: rgb(248, 248, 248);
+  box-shadow: 5px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
 #submit-image-div #image-preview-div {
-  background: red;
   height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  background: white;
 }
 #submit-image-div #image-preview-div img {
-  max-width: 100%;
+  max-width: 90%;
+  -webkit-box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.25);
 }
-#submit-image-div form {
-  background: rgb(248, 248, 248);
-  box-shadow: 5px 0 5px rgba(0, 0, 0, 0.2);
-}
+
 .submit-form ul {
   overflow: hidden;
   padding: 1.5rem 2rem;
@@ -649,11 +706,13 @@ hr {
 .submit-form label {
   display: block;
   font-weight: 700;
+  padding-bottom: 30px;
 }
+
 .submit-form input,
 textarea {
   width: 30vw;
-  padding: 0.5rem;
+  margin: 30px 0;
   border: 2px solid black;
   background: none;
   font-size: var(--fs-default);
@@ -661,14 +720,20 @@ textarea {
   color: inherit;
   outline: none;
 }
+.submit-form ul li:last-child {
+  margin-bottom: -10px;
+}
+.submit-form textarea {
+  margin-bottom: 0px;
+}
 .submit-form button {
-  background: hsl(0, 0%, 10%);
+  width: 100%;
   border: none;
   color: hsl(0, 0%, 100%);
-  font-size: 0.9rem;
+  font-size: var(--fs-default);
   text-transform: uppercase;
   font-family: "gg";
-  padding: 0.5rem 1rem;
+  padding: 1rem;
 }
 .submit-form .tag-input-container {
   display: flex;
@@ -786,6 +851,14 @@ textarea {
     background-image: url("assets/hamburgerclose.svg");
   }
 
+  /* SUBMIT */
+  #submit-image-div {
+    flex-direction: column;
+  }
+  #submit-image-div form input,
+  #submit-image-div form textarea {
+    width: 100%;
+  }
   /* profile */
   #profile input,
   #profile button {
