--- a/src/index.css
+++ b/src/index.css
@@ -145,7 +145,7 @@ body {
   font-size: var(--fs-default);
   color: rgb(0, 0, 0);
 
-  /* background: radial-gradient(rgba(21, 0, 155, 0.604), rgba(255, 0, 111, 0.308))
+  /* background: radial-gradient(rgba(21, 0, 155, 0.604), rgba(255, 0, 89, 0.308))
       no-repeat center center fixed,
     url(https://grainy-gradients.vercel.app/noise.svg); */
   /* background: linear-gradient(
@@ -157,7 +157,7 @@ body {
       )
       no-repeat center center fixed,
     url("../src/assets/noise.svg"); */
-  /* background: repeating-linear-gradient(
+  background: repeating-linear-gradient(
       135deg,
       rgb(236, 171, 42) 0px,
       rgb(236, 171, 42) 23px,
@@ -166,7 +166,7 @@ body {
       rgb(218, 111, 115) 55px,
       rgb(218, 111, 115) 63px
     ),
-    url("../src/assets/noise.svg"); */
+    url("../src/assets/noise.svg");
   /* background-image: repeating-linear-gradient(
     135deg,
     rgba(42, 48, 236, 0.897) 0px,
@@ -280,7 +280,7 @@ textarea {
   transition: box-shadow 0.2s ease-in-out;
 }
 input:disabled {
-  background: #ffffff5b;
+  background: #c5c5c5fa;
   color: black;
   cursor: not-allowed;
 }
@@ -446,7 +446,8 @@ li {
 }
 .modal__imgDesc {
   max-width: 600px;
-  white-space: pre-line;
+  word-break: break-all;
+  white-space: wrap;
 }
 .modal__imgTag {
   margin-top: 60px;
@@ -528,10 +529,10 @@ hr {
 .profile-image {
   height: 100%;
   background: #000;
-  -webkit-mask: url("./assets/burn.png");
+  /* -webkit-mask: url("./assets/burn.png");
   mask: url("./assets/burn.png");
   -webkit-mask-size: 7000% 100%;
-  mask-size: 7000% 100%;
+  mask-size: 7000% 100%; */
   border: none;
   transition: filter 0.55s ease;
   /* -webkit-animation: ani2 0.8s steps(70) ease-in forwards;
@@ -587,7 +588,7 @@ hr {
 } */
 
 #avatar {
-  background-color: rgba(255, 255, 255, 0.74);
+  background-color: rgb(238, 238, 238);
   -webkit-background-size: contain;
   -moz-background-size: contain;
   -o-background-size: contain;
@@ -616,6 +617,13 @@ hr {
   100% {
     transform: scale(1);
   }
+}
+.profile-submit-link {
+  font-size: var(--fs-default);
+  color: black;
+  text-decoration: underline;
+  font-family: "gg-bold";
+  margin: 20px 0;
 }
 
 .hide {
@@ -663,6 +671,7 @@ hr {
 #submit-image-div {
   padding-top: 20px;
   margin: auto;
+  margin-bottom: 30px;
   width: 85%;
   display: flex;
   justify-content: center;
@@ -685,6 +694,7 @@ hr {
   justify-content: center;
   align-items: center;
   background: white;
+  box-shadow: 5px 2px 5px rgba(0, 0, 0, 0.3);
 }
 #submit-image-div #image-preview-div img {
   max-width: 90%;
@@ -711,7 +721,7 @@ hr {
 
 .submit-form input,
 textarea {
-  width: 30vw;
+  width: 35vw;
   margin: 30px 0;
   border: 2px solid black;
   background: none;
@@ -760,6 +770,9 @@ textarea {
 /* ===================== MEDIA QUERY ===================== */
 /* === XS */
 @media (max-width: 35rem) {
+  body::-webkit-scrollbar {
+    width: 1.5vw;
+  }
   hr {
     margin-left: 0;
   }
@@ -850,7 +863,45 @@ textarea {
   .mobile-nav-toggle[aria-expanded="true"] {
     background-image: url("assets/hamburgerclose.svg");
   }
-
+  /* MODAL */
+  body {
+    overflow-x: hidden;
+  }
+  .modalContainer {
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+  }
+  .modal__imgTitle {
+    font-size: var(--fs-lg);
+  }
+  .modal__imgDate {
+    font-size: var(--fs-xs);
+  }
+  .modal__imgTag {
+    margin-top: 20px;
+    margin-bottom: 5px;
+  }
+  .modal__imgDesc {
+    display: none;
+    /* max-height: 100px;
+    overflow-y: scroll; */
+  } 
+  .modalBody {
+    margin: auto;
+    width: 100%;
+    height: 50%;
+    display: flex;
+    padding: 30px;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: space-between;
+  }
+  .modalContainer img {
+    object-fit: cover;
+    max-width: 70%;
+  }
   /* SUBMIT */
   #submit-image-div {
     flex-direction: column;
@@ -904,7 +955,6 @@ textarea {
   #profile input,
   #profile button {
     margin: auto 0;
-
     font-size: var(--fs-default);
   }
   #profile input {
