--- a/src/index.css
+++ b/src/index.css
@@ -132,10 +132,11 @@ input[type="file"]::file-selector-button {
   color: #ffffff;
 }
 body {
-  background-color: rgb(29, 27, 27);
+  background-color: rgb(90, 34, 179);
   /* https://framerusercontent.com/modules/assets/2048/sy0T3nkQUm19CQjLfCrE33og74~j2gmcJQvWCzkfljJuchAjvw0lHdGGLlhv5wQ_S1vdD4.png */
-  background: url(./assets/clouds.svg);
-  /* height: 100vh; */
+  /* background: url(https://framerusercontent.com/modules/assets/2048/sy0T3nkQUm19CQjLfCrE33og74~j2gmcJQvWCzkfljJuchAjvw0lHdGGLlhv5wQ_S1vdD4.png); */
+  min-height: 100vh;
+
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -143,39 +144,46 @@ body {
   background-attachment: fixed;
   font-family: "gg";
   font-size: var(--fs-default);
-  color: rgb(0, 0, 0);
-
-  /* background: radial-gradient(rgba(21, 0, 155, 0.604), rgba(255, 0, 89, 0.308))
-      no-repeat center center fixed,
-    url(https://grainy-gradients.vercel.app/noise.svg); */
-  /* background: linear-gradient(
-        to top,
-        rgba(0, 184, 15, 0.905),
-        rgba(5, 85, 138, 0.905),
-        rgba(101, 0, 160, 0.664),
-        rgba(228, 194, 56, 0.905)
+  color: black;
+  background: radial-gradient(
+        circle,
+        rgba(0, 33, 199, 0.618) 0%,
+        rgba(140, 0, 255, 0.466) 100%
       )
       no-repeat center center fixed,
-    url("../src/assets/noise.svg"); */
-  background: repeating-linear-gradient(
-      135deg,
-      rgb(236, 171, 42) 0px,
-      rgb(236, 171, 42) 23px,
-      rgb(199, 51, 188) 23px,
-      rgb(199, 51, 188) 55px,
-      rgb(218, 111, 115) 55px,
-      rgb(218, 111, 115) 63px
-    ),
     url("../src/assets/noise.svg");
-  /* background-image: repeating-linear-gradient(
+
+  background: radial-gradient(
+      77.73% 77.73% at 98.52% 96.25%,
+      #dd0ea3e7 0%,
+      rgba(99, 48, 211, 0.29) 50.52%,
+      rgba(91, 216, 216, 0) 100%
+    ),
+    radial-gradient(
+      141.73% 105.23% at 50% -7.16%,
+      #1900ffb6 0%,
+      rgba(160, 198, 255, 0) 50.73%,
+      rgba(162, 147, 255, 0) 100%
+    ),
+    radial-gradient(
+      112.27% 48.54% at 1.59% 50%,
+      rgba(76, 0, 255, 0.5) 0%,
+      rgba(228, 89, 205, 0.095) 53.91%,
+      rgba(254, 216, 255, 0) 100%
+    ),
+    linear-gradient(153.07deg, #6256e8c0 6.37%, rgba(255, 230, 166, 0) 83.82%),
+    url("../src/assets/noise.svg");
+}
+.theme2 {
+  background: repeating-linear-gradient(
     135deg,
-    rgba(42, 48, 236, 0.897) 0px,
-    rgba(42, 48, 236, 0.897)23px,
-    rgba(159, 199, 51, 0.822) 23px,
-    rgba(159, 199, 51, 0.822) 55px,
-    rgb(42, 48, 236) 55px,
-    rgb(42, 48, 236) 63px
-  ),url("../src/assets/noise.svg"); */
+    rgb(236, 171, 42) 0px,
+    rgb(236, 171, 42) 23px,
+    rgb(199, 51, 188) 23px,
+    rgb(199, 51, 188) 55px,
+    rgb(218, 111, 115) 55px,
+    rgb(218, 111, 115) 63px
+  );
 }
 /* SCROLLBAR */
 body::-webkit-scrollbar {
@@ -444,19 +452,29 @@ li {
 
   max-width: 50%;
 }
+
 .modal__imgDesc {
+  color: rgba(0, 0, 0, 0.7);
   max-width: 600px;
-  word-break: break-all;
+  word-break: break-word;
   white-space: wrap;
+}
+.modal__imgDate {
+  color: rgba(0, 0, 0, 0.7);
 }
 .modal__imgTag {
   margin-top: 60px;
   margin-bottom: 30px;
 }
+.modal__imgTitle {
+  font-size: 2.5rem;
+  word-wrap: break-word;
+  word-break: break-all;
+}
 .modal__imgTag-link {
   color: rgba(0, 0, 0, 0.7);
   text-decoration: underline;
-  font-family: "gg-bold-italic";
+  font-family: "gg-italic";
 }
 .modal__imgTag-link:hover {
   color: black;
@@ -529,19 +547,12 @@ hr {
 .profile-image {
   height: 100%;
   background: #000;
-  /* -webkit-mask: url("./assets/burn.png");
-  mask: url("./assets/burn.png");
-  -webkit-mask-size: 7000% 100%;
-  mask-size: 7000% 100%; */
   border: none;
   transition: filter 0.55s ease;
-  /* -webkit-animation: ani2 0.8s steps(70) ease-in forwards;
-  animation: ani2 0.8s steps(70) ease-in forwards; */
+  
 }
 .profile-image:hover {
   filter: invert(100%);
-  /* -webkit-animation: ani 0.6s steps(70) forwards;
-  animation: ani 0.6s steps(70) forwards; */
 }
 .edit-details-container {
   display: flex;
@@ -559,33 +570,6 @@ hr {
   flex-direction: column;
   gap: var(--gap);
 }
-/* 
-@keyframes ani {
-  0% {
-    -webkit-mask-position: 0 0;
-    mask-position: 0 0;
-   
-  }
-  50% {
-    -webkit-mask-position: 100% 0;
-    mask-position: 100% 0;
-  }
-  100% {
-    -webkit-mask-position: 0 0;
-    mask-position: 0 0;
-    filter:invert(100%);
-  }
-}
-
-@keyframes ani2 {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-} */
 
 #avatar {
   background-color: rgb(238, 238, 238);
@@ -731,7 +715,7 @@ textarea {
   outline: none;
 }
 .submit-form ul li:last-child {
-  margin-bottom: -10px;
+  margin-bottom: -15px;
 }
 .submit-form textarea {
   margin-bottom: 0px;
@@ -746,6 +730,8 @@ textarea {
   padding: 1rem;
 }
 .submit-form .tag-input-container {
+  margin-top: -15px;
+  margin-bottom: 30px;
   display: flex;
   align-items: center;
   position: relative;
@@ -818,11 +804,15 @@ textarea {
   }
   .primary-navigation li::before {
     transition: width 0.4s cubic-bezier(0.51, 0.18, 0, 0.88) 0.1s;
-    background: linear-gradient(to left, #fffffffa, #d5d5d6dc, #1313131b);
+    background: linear-gradient(
+      to left,
+      rgba(255, 255, 0, 0.692),
+      rgba(209, 29, 140, 0.727)
+    );
   }
   .primary-navigation li::after {
     transition: width 0.2s cubic-bezier(0.29, 0.18, 0.26, 0.83);
-    background: linear-gradient(to left, #ffffff, #d5d5d6dc, #1313131b);
+    background: linear-gradient(to left, yellow, rgb(209, 29, 140));
   }
 
   .navbar-span {
@@ -875,6 +865,8 @@ textarea {
   }
   .modal__imgTitle {
     font-size: var(--fs-lg);
+    word-wrap: break-word;
+    word-break: break-all;
   }
   .modal__imgDate {
     font-size: var(--fs-xs);
@@ -887,7 +879,7 @@ textarea {
     display: none;
     /* max-height: 100px;
     overflow-y: scroll; */
-  } 
+  }
   .modalBody {
     margin: auto;
     width: 100%;
@@ -1019,9 +1011,3 @@ textarea {
     align-items: center;
   }
 }
-/* .my-masonry-grid > :nth-child(odd) {
-  filter: grayscale();
-}
-.my-masonry-grid > :nth-child(even) {
-  filter: invert() grayscale();
-} */
